# meterapi/Data/Mappers/UserMeterDTO.cs
@@ -10,8 +10,8 @@ namespace meterapi.Data.Mappers
         [ForeignKey("Meter")]
         public int MeterId { get; set; }
 
-        public int RpId { get; set; }
-        public int MeterAId { get; set; }
+        public string RpId { get; set; }
+        public string MeterDeviceId { get; set; }
 
 
 
